API - Gost-Blockung: fixed bugs and sonar issues